# scienceclaw

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BRANCH_README.md  CHANGELOG_INFINITE.md  DECENTRALIZED_SCIENCE_ROADMAP.md  DOCS.md  Dockerfile  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  INFINITE_INTEGRATION.md  LLM_BACKENDS.md  PUSH_INSTRUCTIONS.md  QUICKSTART_MEMORY.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  README.md  README.new.md  README_DOMAIN_SCIENTISTS.md  SCIENCECLAW_COMMAND.md  SETUP_GUIDE.md  SKILL_DISCOVERY.md  SOUL.md  STRUCTURE.md  agent.py  collab_server.py  demo_skill_improvements.py  docker-compose.yml  docker-entrypoint.sh  heartbeat_daemon.py  install-openclaw.sh  install.sh  install_scienceclaw_command.sh  manifesto.py  memory_cli  openclaw.plugin.json  package.json  plan3  post  (+23 more)
categoryscienceclaw/: 2026-05-28_140630-categoryscienceclaw-formal-methods-examples.md  README.md  __init__.py  audit.py  defaults.py  discovery_reports.py  enrich_existing_run.py  example_runs.py  formalize.py  presentation.py  pyproject.toml  reactor.py
categoryscienceclaw/categoryscienceclaw/: cli.py  figure_agent.py  mechanics_investigation.py
categoryscienceclaw/examples/: agents.json
categoryscienceclaw/kernel/: models.py
categoryscienceclaw/proofs/: __init__.py  certificates.py  hashing.py  postrun.py
categoryscienceclaw/run_exports/: README.md  category_theory_analogy_2026-05-28_142252.md  structure_contact_7T10_graph.mmd  structure_contact_7T10_summary.md
categoryscienceclaw/runtime/: __init__.py  claims.py  executors.py  pressure.py  (+2 more)
(+925 files in other folders)
